--- a/scss/style.scss
+++ b/scss/style.scss
@@ -107,3 +107,13 @@ footer {
 #validate{
   border: red;
 }
+#delete-image{
+  width: 30px;
+  height: 30px;
+}
+#delete-image:hover{
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  transition-duration: 2s;
+}
